# headroom

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/ai/: mod.rs
src/collect/: memory.rs  mod.rs  paging.rs  process.rs
src/tui/: mod.rs
